archive/k8s/manifests/ingress-my-site.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  rules:
    - host: www.my-site.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: main
                port:
                  number: 80
          - path: /page1
            pathType: Prefix
            backend:
              service:
                name: tomcat
                port:
                  number: 8080
